overflow auto; fix img container

--- a/src/components/AboutModal.css
+++ b/src/components/AboutModal.css
@@ -2,6 +2,7 @@
 .about-modal { 
   display: none;
   position: fixed;
+  overflow: auto;
   width: 100%;
   height: 100%;
   inset: 0;
@@ -54,7 +55,8 @@
 .carousel {
   position: relative;
   min-width: 80%;
-  height: 75%;
+  height: 90%;
+  overflow: scroll;
   background-color: rgb(71, 120, 144, 0.4);
   border: solid var(--clr-tealblue) 7px;
   border-radius : 10px;
@@ -62,12 +64,13 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
-  gap: 0.7em;
+  gap: 1.2em;
 }
 
 .carousel-stat { 
   font-size: 1.5em;
   display: flex;
+  padding: 0 20px;
   flex-direction: column;
   word-wrap: normal;
 }
@@ -89,12 +92,11 @@
   white-space: pre;
 } */
 
-.carousel-image-container { max-height: 10em }
+.carousel-image-container { height: 15em }
 .carousel-image-container img {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  border-radius: 10px;
 }
 
 
